--- a/src/view/MainView.ejs
+++ b/src/view/MainView.ejs
@@ -1,5 +1,5 @@
 <body>
-    <form action="/" method="post">
+    <form action="/Cargar" method="post">
         <div>
         <label for="Nombre">Nombre:</label>
         <input type="text" name="Nombre">
