--- a/src/view/Layouts/layout.ejs
+++ b/src/view/Layouts/layout.ejs
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preseleccion-Verano</title>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <%- include("../Parcials/Header.ejs") %>
 <body>
     <%- body %>
 </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <%- include("../Parcials/Footer.ejs") %>
 </html>
