--- a/src/view/Parcials/Header.ejs
+++ b/src/view/Parcials/Header.ejs
@@ -1,4 +1,21 @@
-<header>
-    <a href="/">Inicio</a>
-    <a href="">Datos</a>
-</header>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Inicio</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegación">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+
+      <a class="navbar-brand" href="/Administrador">Administrador</a>
+
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/datos">Datos</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
