--- a/src/view/AdminView.ejs
+++ b/src/view/AdminView.ejs
@@ -31,7 +31,7 @@
               <td><%= estudiante.materia %></td>
               <td><%= estudiante.materia2 %></td>
                <td>
-          <a href="/actualizar/<%= estudiante.id %>" class="btn btn-warning btn-sm">
+          <a href="/<%= estudiante.id %>" class="btn btn-warning btn-sm">
             <i class="bi bi-pencil-square"></i> Editar
           </a>
         </td>
