--- a/src/view/Parcials/Header.ejs
+++ b/src/view/Parcials/Header.ejs
@@ -5,17 +5,12 @@
       aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegación">
       <span class="navbar-toggler-icon"></span>
     </button>
-
-
-      <a class="navbar-brand" href="/Administrador">Administrador</a>
-
-
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/datos">Datos</a>
-        </li>
-      </ul>
-    </div>
+      <a class="navbar-brand" href="/Administrador">Administrador</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegación">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      </div>
   </div>
 </nav>
