--- a/src/view/Layouts/layout.ejs
+++ b/src/view/Layouts/layout.ejs
@@ -7,9 +7,9 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <%- include("../Parcials/Header.ejs") %>
-<body>
+<body class="bg-light d-flex flex-column min-vh-100">
     <%- body %>
+    <%- include("../Parcials/Footer.ejs") %>
 </body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<%- include("../Parcials/Footer.ejs") %>
 </html>
